# IAP_workshop_2026

./: .gitignore  README.md  env.example  main.py  pyproject.toml
api/: config.py  database.py  main.py  models.py  schemas.py
api/routes/: automation.py  feedback.py  posts.py  rag.py  replies.py  state.py
deploy/: README.md  deploy.sh  fastapi.service  setup_vm.sh
tests/: test_generate_image.py  test_llm.py  test_mastodon_client.py  test_notion_client.py
workshop1/: __init__.py  __main__.py  chunker.py  config.py  llm.py  makePosts.py  mastodon_client.py  mastodon_listener.py  notion_client.py  notion_listener.py  rag.py  replicate_client.py  replyPosts.py  telegram_client.py  vector_db.py
